syntax = "proto3";

option csharp_namespace = "Calculator";

package calculator; //name space

// The greeting service definition.
service Calculator {
  // Sends a greeting
  rpc Add (AddRequest) returns (AddResponse);
}

// The request message containing the user's name.
message AddRequest {
  int32 number1 = 1;
  int32 number2 = 2;
}

// The response message containing the greetings.
message AddResponse {
  int32 sum = 1;
}
